# lingmo-installer

./: autogen.sh  configure.ac  plugin-viewer-gtk.py
autopilot/: README.md  autopilot  launch_vis  run_lingmo-installer
compat/: anna-install  apt-install  linux-boot-prober  locale  os-prober  udpkg  update-dev
d-i/: README  manifest  update-control
data/: Makefile.am  com.lingmo.lingmo-installer.policy.in  lingmo-installer-kdeui.desktop.in  lingmo-installer.desktop.in  oem-config-prepare-gtk.desktop.in  oem-config-prepare-kde.desktop.in  oem-config.service
data/icons/: Makefile.am
debian/: changelog  changelog.oem-config  clean  control  copyright  lingmo-installer-frontend-debconf.install  lingmo-installer-frontend-gtk-panel.install  lingmo-installer-frontend-gtk.install  lingmo-installer-frontend-gtk.menu  lingmo-installer-frontend-kde.install  lingmo-installer-gtkui.lintian-overrides  lingmo-installer-guadalinex-artwork.install  lingmo-installer-kdeui.lintian-overrides  lingmo-installer-lingmo-artwork.install  lingmo-installer.dirs-any  lingmo-installer.install-amd64  lingmo-installer.install-any  lingmo-installer.lingmo-installer.service  lingmo-installer.lingmo-installer.upstart  lingmo-installer.lintian-overrides  lingmo-installer.manpages  lingmo-installer.postinst  lingmo-installer.templates  lingmo-installer.templates-imported  oem-config-debconf.oem-config-debconf.upstart  oem-config-gtk.install  oem-config-gtk.postinst  oem-config-gtk.postrm  oem-config-gtk.preinst  oem-config-kde.install  oem-config-kde.postinst  oem-config.dirs  oem-config.links  oem-config.oem-config.upstart  rules
doc/: Changelog.Guadalinex  README  clock-handling  lingmo-installer.8  oem-config-firstboot.8  oem-config-prepare.8
finish-install.d/: 01oem-config-udeb
lingmo-installer/: auto_update.py  debconfcommunicator.py  debconffilter.py  filteredcommand.py  gsettings.py  gtkwidgets.py  i18n.py  im_switch.py  misc.py  (+11 more)
src/mockresolver/: Makefile.am  mockresolver.c  mockresolver.h
(+917 files in other folders)
